2018-12-07  yves  <deville.yves@alpestat.com>

	* BUG fix: in 'rGEV' the function simulated an exponential rather
	than a Gumbel when shape = 0.

2018-10-15  yves  <deville.yves@alpestat.com>

	* Warn about the need of centering in the documentation of
	`polynomX`.

2017-09-29  yves  <deville.yves@alpestat.com>

	* Improved the speed of the bootstrap computations in
	'predict.TVGEV'.

	* Small changes in doc.

2017-09-27  yves  <deville.yves@alpestat.com>

	* Added 'natSplineX' for a natural spline design.

	* Fixed small problems in code and doc.

2017-08-21  yves  <deville.yves@alpestat.com>

	* Changed 'plot.TVGEV' to render in black and white print.

	* Refactored code of 'profLik': easier to read and display
	information.

	* Added a better control of arguments passed through dots.

	* Added exact computation of Hessian for TVGEV models. Might be
	plugged in the estimation in the future.

	* Added bootstap inference on unconditional predictions.
	
	
2017-08-14  yves  <deville.yves@alpestat.com>

	* Changed predict.TVGEV to improve the convergence of the
	constrained optimisation.

2017-06-13  yves  <deville.yves@alpestat.com>

	* Added the computation of the (exact) Hessian of the log-density
	and of the quantile for the GEV distribution.

2017-05-31  yves  <deville.yves@alpestat.com>

	* New classes "bts" and 'bfts" for results concerning TVGEV
	objects.

	* Many changes concerning methods for TVGEV objects or derived
	objects: quantiles, density, RL predictions, ...

	* Bug fixes and fine tuning for profile-likelihod (implementation
	of chain rule for TVGEV models).

2017-03-24  yves  <deville.yves@alepstat.com>

	* New class "TVGEV" for Time-Varying objects. 

2016-12-23  yves  <deville.yves@alpestat.com>

	* Fixed bug: with a non-zero shape the 'rGEV' returned
	simulations from the GPD with the same parameters.

2016-09-19  yves  <deville.yves@alpestat.com>

	* Copied 'stats:::format_perc' to avoid importing a non-exported
	function.
